syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

service User {
    rpc GetData (DataRequest) returns (GetDataReponse);
    rpc GetDataIds (DataIdRequest) returns (GetDataIdsResponse);
}

// TODO: pagination
message DataRequest {
    string userId = 1;
    int64 from = 2;
}

// TODO: pagination
message DataIdRequest {
    string userId = 1;
}

message GetDataReponse {
    message Data {
        int64 collectedAt = 1;
        int64 ingestedAt = 2;
        string payload = 3;
    }

    message Collection {
        string id = 1;
        repeated Data data = 3;
    }

    repeated Collection collections = 1;
}

message GetDataIdsResponse {
    message DataInfo {
        string id = 1;
        int64 collectedAt = 2;
        int64 ingestedAt = 3;
    }

    message Collection {
        string collectionId = 3;
        repeated DataInfo dataInfoes = 4;
    }
    repeated Collection collections = 1;
}
